# help-desk

./: .env.local  .env.local.example  .env.prod.example  .gitattributes  .gitignore  CLAUDE.md  DOCKER.md  Makefile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
helpDesk_back/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
helpDesk_back/alembic/: env.py
helpDesk_back/alembic/versions/: 001_create_users_table.py  002_full_schema_migration.py  002a_tickets_and_related_tables.py  003_add_ticket_executors.py  004_add_notifications_and_outbox.py  005_add_ticket_progress_percent.py  006_seed_sla_system_settings.py  007_seed_ticket_categories.py  008_asset_management_module.py  009_ticket_comments.py  010_outbox_add_dead_letter.py  011_departments_add_number.py  012_seed_departments.py  013_local_auth.py  014_users_tabel_number.py
helpDesk_back/docs/: MODULES.md
helpDesk_back/scripts/: update-lock.sh
helpDesk_back/src/app/: __init__.py  config.py  main.py
helpDesk_back/src/app/asset/: README.md  __init__.py
helpDesk_back/src/app/auth/: README.md  __init__.py  dependencies.py  errors.py
helpDesk_back/src/app/core/: README.md  database.py  enums.py  exceptions.py  http.py  security.py
helpDesk_back/src/app/seed/: data.py  (+3 more)
helpDesk_back/tests/: conftest.py  test_auth.py  test_bnpzid.py  test_database.py  test_department_router.py  test_notification.py  test_sla_service.py  test_system_service.py  test_ticket_authz_deps.py  test_ticket_comments.py  test_ticket_router.py  test_ticket_service.py
(+226 files in other folders)
